# C-gRPC-Microservice

./: CMakeLists.txt  README.md  commands.txt
client-testing/: client.cpp  client.h
database/: db.h
inc/: header.h
include/: header.h
proto/: user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h  user.proto
src/: main.cpp  run_server.cpp  server.cpp
src/server/: create_user.cpp  get_user.cpp
